# it8tool

./: CMakeLists.txt  README.md  it8tool.cpp
data/it8/4x5_Transparency_Ref_Files_2007_Forward/: MONT45.2007.01.txt  MONT45.2007.02.txt  MONT45.2007.05.txt  MONT45.2007.08.txt  MONT45.2007.09.txt  MONT45.2007.11.txt  MONT45.2007.12.txt  MONT45.2008.01.txt  MONT45.2008.02.txt  MONT45.2008.06.txt  MONT45.2008.07.txt  MONT45.2008.10.txt  MONT45.2008.11.txt  MONT45.2008.12.txt  MONT45.2009.01.txt  MONT45.2009.02.txt  MONT45.2009.06.txt  MONT45.2009.07.txt  MONT45.2009.08.txt  MONT45.2009.09.txt  MONT45.2009.12.txt  MONT45.2010.07.txt  MONT45.2010.10.txt  MONT45.2010.11.txt  MONT45.2010.12.txt  MONT45.2011.03.txt  MONT45.2011.05.txt  MONT45.2012.10.txt  MONT45.2013.02.txt  MONT45.2013.09.txt  MONT45.2014.01.txt  MONT45.2014.08.txt  MONT45.2015.01.txt  MONT45.2015.06.txt  MONT45.2016.01.txt  MONT45.2016.05.txt  MONT45.2016.10.txt  MONT45.2017.09.txt  MONT45.2018.04.txt  MONT45.2018.09.txt  (+41 more)
data/it8/5x7_Reflective_Ref_Files-2007_Forward/: MONR2007.01.01.mrf  MONR2007.02.01.mrf  MONR2007.03.01.mrf  MONR2007.07.01.mrf  MONR2007.09.01.mrf  MONR2007.11.01.mrf  MONR2007.12.01.mrf  MONR2008.01.01.mrf  MONR2008.06.01.mrf  MONR2008.08.01.mrf  MONR2008.11.01.mrf  MONR2008.12.01.mrf  MONR2009.04.01.mrf  MONR2009.07.01.mrf  MONR2009.11.01.mrf  MONR2010.03.01.mrf  MONR2010.06.01.mrf  MONR2010.08.01.mrf  MONR2010.09.01.mrf  MONR2010.10.01.mrf  MONR2010.11.01.mrf  MONR2010.12.01.mrf  MONR2010.12.02.mrf  MONR2011.03.01.mrf  MONR2011.05.01.mrf  MONR2012.02.01.mrf  MONR2012.02.03.mrf  MONR2012.07.01.mrf  MONR2012.08.01.mrf  MONR2013.01.01.mrf  MONR2013.09.01.mrf  MONR2014.03.01.mrf  MONR2014.08.01.mrf  MONR2014.08.02.mrf  MONR2015.03.01.mrf  MONR2016.02.13.mrf  MONR2016.03.01.mrf  MONR2016.09.01.txt  MONR2017.06.01.mrf  MONR2017.12.01.mrf  (+44 more)
data/nuke/: it8tool_applymatrix.py  it8tool_nodetree.nknc
modules/: FindEigen.cmake  FindImath.cmake  FindOCIO.cmake  FindOIIO.cmake  FindRawtoaces.cmake
scripts/: macdeploy.sh
